--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,7 +45,7 @@
 
         <div class="picker-row">
           <label class="pill control-pill">
-            <input type="file" id="photo-upload" accept="image/jpeg,image/png,image/webp" hidden>
+            <input type="file" id="photo-upload" accept="image/*" hidden>
             Upload Photo
           </label>
           <button class="pill" id="start-camera" type="button">Use Camera</button>
